GS-13245 - enrollment table fix "out of ten" spacing

--- a/src/webapp/res/css/12_advertising/ad-IE7.css
+++ b/src/webapp/res/css/12_advertising/ad-IE7.css
@@ -50,6 +50,8 @@ General comments:
 .ie-moduleHeight-171{height:171px;}
 .ie-mp0{ margin-top: 0px; margin-bottom: 0px; padding-top: 0px; padding-bottom: 0px;}
 .ie-over-ratings0{ margin-top: 0px; margin-bottom: 0px; padding-bottom: 0px; padding-top: 2px}
+.ie-enroll-chances-mvm{ margin-top: 10px; margin-bottom: 10px; }
+.ie-enroll-chances-pvs{ padding-bottom: 5px; padding-top: 5px}
 
 /*************************************************************************************************************
 
